# ml-drug-discovery

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  APPENDIX_C_FLYNN_ML4DD.ipynb  APPENDIX_C_FLYNN_ML4DD.py  CH01_FLYNN_ML4DD.ipynb  CH01_FLYNN_ML4DD.py  CH02_FLYNN_ML4DD.ipynb  CH02_FLYNN_ML4DD.py  CH02_Flynn_ML4DD.ipynb  CH02_e2e_virtual_screening.ipynb  CH03_FLYNN_ML4DD.ipynb  CH03_FLYNN_ML4DD.py  CH04_FLYNN_ML4DD.ipynb  CH04_FLYNN_ML4DD.py  CH05_FLYNN_ML4DD.ipynb  CH05_FLYNN_ML4DD.py  CH06_FLYNN_ML4DD.ipynb  CH06_FLYNN_ML4DD.py  CH07_FLYNN_ML4DD.ipynb  CH07_FLYNN_ML4DD.py  CH08_FLYNN_ML4DD.ipynb  CH08_FLYNN_ML4DD.py  CH09_FLYNN_ML4DD.ipynb  CH09_FLYNN_ML4DD.py  CH10_FLYNN_ML4DD.ipynb  CH10_FLYNN_ML4DD.py  CH11_FLYNN_ML4DD.ipynb  CH11_FLYNN_ML4DD.py  INSTALL.md  Makefile  README.md  bookutils.py  code_listing_feedback_for_qa.md  justfile  ml4dd2025.yml  pyproject.toml  requirements-advanced.txt  requirements-core.txt  requirements-full.txt  (+2 more)
.github/workflows/: qa.yml
CH07/data/processed/: processed_CH07_activity_data.csv
CH07/data/raw/: CH07_activity_data.csv  CH07_drug_repurposing_hub.txt  mpro_frags.sdf
CH12_FLYNN_ML4DD/: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
CH12_FLYNN_ML4DD/data/: bcr.parquet  bcr_test.parquet  bcr_train.parquet
CH12_FLYNN_ML4DD/notebooks/: CH12-protein-transformers.ipynb  CH12-protein-transformers.py  ch12-antibody-classification.ipynb  ch12-antibody-classification.py  ch12-mutation-scoring.ipynb  ch12-mutation-scoring.py
CH12_FLYNN_ML4DD/scripts/: evaluate.py  train.py  train_plm.py  tune.py
CH12_FLYNN_ML4DD/src/: __init__.py  data.py  model.py  utils.py
CH12_FLYNN_ML4DD/tests/: test_data.py  test_model.py  test_utils.py
artifacts/ch02/: specs_hits_to_malaria_box.csv
artifacts/ch03/: final_model_evaluation.txt  herg_blockers_cls_model.pkl  herg_blockers_cls_model_rs.pkl
artifacts/ch05/: cyp_inhibitor_df.pkl
artifacts/ch06/: binder_data.pkl  binder_model.pkl
artifacts/ch09/: active_learning_results.csv
artifacts/ch09/4AG8_docking_experiment/tensorboard_logs/: events.out.tfevents.1742769741.LAPTOP-6MEH86RE.3943.0
artifacts/ch09/al_experiments/: combined_results.csv  factor_importance.csv  summary_table.csv  summary_table.tex
artifacts/ch09/al_experiments/init1000_div_acqei_bud100_iter20_0323_1628/: config.json
artifacts/ch09/al_experiments/init1000_div_acqei_bud20_iter20_0323_1627/: config.json
artifacts/ch09/al_experiments/init1000_div_acqei_bud50_iter20_0323_1757/: config.json
artifacts/ch09/al_experiments/init1000_div_acqgre_bud100_iter20_0323_1807/: config.json
artifacts/ch09/al_experiments/init1000_div_acqgre_bud20_iter20_0323_1750/: config.json
artifacts/ch09/al_experiments/init1000_div_acqgre_bud50_iter20_0323_1757/: config.json
artifacts/ch09/al_experiments/init1000_ran_acqei_bud100_iter20_0323_1802/: config.json
artifacts/ch09/al_experiments/init1000_ran_acqei_bud20_iter20_0323_1627/: config.json
artifacts/ch09/al_experiments/init1000_ran_acqei_bud50_iter20_0323_1628/: config.json
artifacts/ch09/al_experiments/init1000_ran_acqgre_bud100_iter20_0323_1758/: config.json  results.csv
artifacts/ch09/al_experiments/init1000_ran_acqgre_bud20_iter20_0323_1627/: config.json
artifacts/ch09/al_experiments/init1000_ran_acqgre_bud20_iter20_0323_1738/: results.csv
artifacts/ch09/al_experiments/init1000_ran_acqgre_bud50_iter20_0323_1750/: config.json
artifacts/ch09/al_experiments/init100_div_acqei_bud100_iter20_0323_1625/: config.json
artifacts/ch09/al_experiments/init100_div_acqei_bud20_iter20_0323_1625/: config.json
artifacts/ch09/al_experiments/init100_div_acqei_bud50_iter20_0323_1625/: config.json
artifacts/ch09/al_experiments/init100_div_acqgre_bud100_iter20_0323_1709/: config.json
artifacts/ch09/al_experiments/init100_div_acqgre_bud20_iter20_0323_1652/: config.json
artifacts/ch09/al_experiments/init100_div_acqgre_bud50_iter20_0323_1700/: config.json
artifacts/ch09/al_experiments/init100_ran_acqei_bud100_iter20_0323_1625/: config.json
artifacts/ch09/al_experiments/init100_ran_acqei_bud20_iter20_0323_1645/: config.json
artifacts/ch09/al_experiments/init100_ran_acqei_bud50_iter20_0323_1653/: config.json
artifacts/ch09/al_experiments/init100_ran_acqgre_bud100_iter20_0323_1625/: config.json
artifacts/ch09/al_experiments/init100_ran_acqgre_bud20_iter20_0323_1642/: config.json  results.csv
artifacts/ch09/al_experiments/init100_ran_acqgre_bud50_iter20_0323_1653/: config.json
artifacts/ch09/al_experiments/init500_div_acqei_bud100_iter20_0323_1738/: config.json
artifacts/ch09/al_experiments/init500_div_acqei_bud20_iter20_0323_1626/: config.json
artifacts/ch09/al_experiments/init500_div_acqei_bud50_iter20_0323_1626/: config.json
data/: CH06_Mordred_Test_Compounds_3D.csv  CH06_hargrove_data.csv  MalariaBox400compoundsDec2014.xls  glaxo_structural_alerts.csv
data/ch01/: eroom_law.csv  eroom_law_SOURCES.md
data/ch01/fda_approved_drugs/: -cillin.csv  -conazole.csv  -olol.csv  -oxacin.csv  -terol.csv  -tinib.csv  -vir.csv
data/ch03/: hERG_blockers.xlsx
data/ch05/: cyp1a2_veith.tab  cyp2c19_veith.tab  cyp2d6_veith.tab
data/ch07/raw/: CH07_drug_repurposing_hub.csv
data/ch09/: 4AG8_docking.csv
data/ch10/: fda_approved_drugs.csv
data/fda_approved_drugs/: -caine.csv  -pine.csv  fda_approved_drugs.csv  sulfa-.csv
docs/: CHAPTER_TEMPLATE.md
figures/ch05/: tree.dot
qa/: APPENDIXC_task.md  CH01_task.md  CH02_task.md  CH03_task.md  CH04_task.md  CH05_task.md  CH06_task.md  CH07_task.md  CH08_task.md  CH09_task.md  CH10_task.md  CH11_task.md  CH12_task.md  README.md  check_callouts.py  modernize_headers.py
qa_reports/: AGENT_BRIEF_TEMPLATE.md  AUTHOR_QUEUE.md  COVERAGE.md  PR_INTEGRATION.md  REPORT_TEMPLATE.md  SCHEMA.md  SECURITY.md  ch01_report.md  ch02_report.md  ch03_report.md  ch04_report.md  ch05_report.md  ch06_report.md  ch07_report.md
qa_reports/inventory_slices/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md
tools/: bootstrap_env.sh  execute_notebook.py  validate_notebooks.py
(+85 files in other folders)
