[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# The importable content of this repo is the two shared helper modules; the
# chapter notebooks and the CH12 sub-package are not part of this distribution.
# Pin py-modules so setuptools' flat-layout auto-discovery doesn't error on the
# many top-level directories (data/, figures/, artifacts/, CH12_FLYNN_ML4DD/).
[tool.setuptools]
py-modules = ["utils", "bookutils"]

[project]
name = "ml-drug-discovery"
version = "1.0.0"
description = "Build AI Drug Discovery Pipelines - Code and Data Repository"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Noah Flynn"}
]
keywords = ["machine-learning", "drug-discovery", "cheminformatics", "deep-learning"]

# Base dependencies == the "core" tier (Chapters 1-4): basic ML, QSAR, and
# similarity-based screening. `pip install -e .` / `uv sync` gives you these.
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "scipy>=1.15.0",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "rdkit>=2024.9.1",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.1",
    "joblib>=1.4.0",
    "jupyterlab>=4.3.0",
]

[project.optional-dependencies]
# Chapters 5-8 + Appendix C: gradient boosting & deep learning.
# Additive on top of the base (core) dependencies.
advanced = [
    "catboost>=1.2.7",
    "lightgbm>=4.6.0",
    "xgboost>=2.1.4",
    "torch>=2.6.0",
    "shap>=0.46.0",
    "umap-learn>=0.5.7",
    "minisom>=2.3.5",
    "scikit-multilearn>=0.2.0",
    "statsmodels>=0.14.4",
    "imbalanced-learn>=0.13.0",
    "plotly>=5.24.1",
    "py3Dmol>=2.4.2",
    # mordredcommunity is the maintained fork of the (abandoned) mordred; it
    # supports networkx>=3 and Python 3.12 and imports as `mordred`.
    "mordredcommunity>=2.0.6",
    "dimorphite-dl>=2.0.0",
    "tensorboard>=2.18.0",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "pyyaml>=6.0.2",
]

# Chapters 10-11: generative models & graph neural networks. All pip-installable
# (audit confirmed only Chapter 9 needs conda). Pulls in `advanced` too.
full = [
    "ml-drug-discovery[advanced]",
    "torch-geometric>=2.6.1",
    "openbabel-wheel>=3.1.1",
    "selfies>=2.1.2",
    "SmilesPE>=0.0.3",
    "mdtraj>=1.10.2",
    "prolif>=2.0.3",
    "gemmi>=0.7.0",
    "meeko>=0.5.0",
]

# NOTE — Chapter 9 ONLY (structure-based design: docking / molecular dynamics):
# openmm, pdbfixer, and vina are conda-forge packages (pdbfixer has no PyPI
# wheel), so they are deliberately NOT declared as a pip extra here — that would
# break `uv lock` / `pip install`. The supported path for Chapter 9 is
# `conda env create -f ml4dd2025.yml`. Every other chapter installs under uv/pip.

dev = [
    "pytest>=8.0.0",
    "nbmake>=1.5.0",
    "nbqa>=1.8.0",
    "nbdime>=4.0.0",
    "jupytext>=1.16.0",
    "pre-commit>=3.7.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/nrflynn2/ml-drug-discovery"
Repository = "https://github.com/nrflynn2/ml-drug-discovery"
Documentation = "https://www.manning.com/books/machine-learning-for-drug-discovery"

[tool.uv]
# Reproducible resolution across the pip-installable tiers (core/advanced/full/
# dev). Chapter 9's conda-forge docking/MD stack lives in ml4dd2025.yml and is
# intentionally not part of this lock.
package = true

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
