[project]
name = "ch12-protein-transformer"
version = "0.1.0"
description = "Production-quality implementations of Transformer-based protein models for educational purposes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Noah Flynn", email = "noahrflynn@gmail.com"}
]
keywords = ["protein", "transformer", "deep-learning", "bioinformatics", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "typer>=0.12.0",
    "pyarrow>=16.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# For Jupyter notebook users
notebooks = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "jupytext>=1.14.0",
]

# For hyperparameter tuning
tuning = [
    "ray[tune]>=2.11.0",
]

# Complete development environment
dev = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "jupytext>=1.14.0",
    "ray[tune]>=2.11.0",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]
