[project]
name = "ch12-protein-transformer"
version = "0.1.0"
description = "Production-quality implementations of Transformer-based protein models for educational purposes"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Noah Flynn", email = "noahrflynn@gmail.com"}
]
keywords = ["protein", "transformer", "deep-learning", "bioinformatics", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Aligned with the book's root environment (Python 3.12). torchvision/torchaudio
# are intentionally absent: no Chapter 12 code imports them. The old
# requirements.txt pinned an inconsistent trio (torch 2.8.0 with torchvision
# 0.17.2 / torchaudio 2.2.2 / triton 2.2.0), which cannot resolve together.
# SECURITY: floors are set at-or-above the first patched version for every
# Dependabot advisory raised against this package (see qa_reports/SECURITY.md):
# torch >=2.10.0 (medium), pyarrow >=23.0.1 (high), jupyterlab >=4.5.9 (high),
# ray >=2.54.0 (CRITICAL).
dependencies = [
    "torch>=2.10.0",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "typer>=0.12.0",
    "pyarrow>=23.0.1",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# Interactive notebooks (Ch12 + Appendix D tutorials): pretrained ESM-2 via
# Hugging Face transformers, BioPython for sequence handling, plus viz/widgets.
notebooks = [
    "jupyterlab>=4.5.9",
    "ipykernel>=6.29.0",
    "jupytext>=1.16.0",
    "transformers>=4.44.0",
    "biopython>=1.83",
    "tqdm>=4.67.1",
    "ipywidgets>=8.1.0",
    "cmocean>=4.0.3",
]

# Hyperparameter tuning (scripts/tune.py)
tuning = [
    "ray[tune]>=2.54.0",
]

# Complete development environment
dev = [
    "ch12-protein-transformer[notebooks,tuning]",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]
